--- a/cursos.html
+++ b/cursos.html
@@ -19,7 +19,7 @@
     <section>
       <h1 id="header">Cursos</h1>
       <div class="top">
-        <a href="#header">😂👌<a/>
+        <a href="#header">Voltar para o topo<a/>
       </div>
 
       <div class="letters">
