--- a/courses.html
+++ b/courses.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="cursos-styles.css">
+    <link rel="stylesheet" href="./styles/courses_styles.css">
     <title>Alura - cursos</title>
   </head>
 
@@ -32,6 +32,6 @@
 
 
     </section>
-    <script src="cursos-scripts.js" ></script>
+    <script src="./scripts/courses_scripts.js" ></script>
 </body>
 </html>
