--- a/courses.html
+++ b/courses.html
@@ -2,11 +2,14 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/styles.css">
     <link rel="stylesheet" href="./styles/courses_styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/jpg" href="./image/a.jpg" />
     <title>Alura - cursos</title>
   </head>
 
-  <body>
+  <body class="container">
 
     <header>
       <nav>
@@ -18,6 +21,13 @@
 
     <section>
       <h1 id="header" title="teste Title">Cursos</h1>
+      <a href="courses.html">Mostrar todos os cursos</a>
+      <form onsubmit="return handleSubmitSearch(event)">
+        <label for="course" >
+          <input class="input" id="input-search" placeholder="Procure por outros cursos?">
+          <button class="input-button" type="submit"></button>
+        </label>
+      </form>
       <div class="top">
         <a href="#header">Voltar para o topo<a/>
       </div>
