Updating the page style courses

--- a/courses.html
+++ b/courses.html
@@ -35,7 +35,7 @@
 
     <main>
 
-      <div class="top">
+      <div class="top" title="Voltar para o topo">
         <a class="arrow-top" href="#header"><a/>
       </div>
 
