Update page search

--- a/search.html
+++ b/search.html
@@ -16,7 +16,9 @@
 
   <header>
 
-    <div id="wave"></div>
+    <div id="ocean">
+
+    </div>
 
     <nav class="nav-bar">
       <a href="/">
@@ -39,11 +41,15 @@
       <main id="main">
         <h1 id="h1"></h1>
 
-        <ul id="ul"></ul>
+        <ul class="ul-list" id="ul"></ul>
         
       </main>
 
     </body>
+
+    <footer>
+        <a href="#ocean">Volta ao topo</a>
+    </footer>
  
     <script src="./scripts/search_scripts.js"></script>
   </html>
