Create page index

--- a/courses.html
+++ b/courses.html
@@ -16,7 +16,7 @@
     <header id="header">
       <nav class="nav-bar">
         <a href="/">
-          <h1>AluraScript</h1>
+          <h1 class="h1-logo">AluraScript</h1>
         </a>
 
         <form onsubmit="return handleSubmitSearch(event)">
