--- a/search.html
+++ b/search.html
@@ -15,14 +15,10 @@
   </head>
 
   <header>
-
-    <div id="ocean">
-
-    </div>
-
+    <div class="nav-background"></div>
     <nav class="nav-bar">
       <a href="/">
-        <h1 class="h1-logo" >AluraScript</h1>
+        <h1 class="h1-logo">AluraScript</h1>
       </a>
 
       <form onsubmit="return handleSubmitSearch(event)">
