Add page formation

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </label>
               </form>
               <a class="link" href="/courses.html">Cursos</a>
-              <a class="link" href="#">Formações</a>
+              <a class="link" href="/formation.html">Formações</a>
               <a class="link" href="#">Entrar</a>
               <button class="primary-button">Matricule-se</button>
             </nav>
