--- a/formation.html
+++ b/formation.html
@@ -45,6 +45,14 @@
       </div>
     </section>
 
+    <section id="section-content" style="
+      background-color: whitesmoke; 
+      width: 80%;
+      margin: 0 auto;
+    "></section>
+
    </main>
   </body>
+
+  <script type="module" src="./scripts/formation_scripts.js"></script>
 </html>
