--- a/formation.html
+++ b/formation.html
@@ -45,11 +45,83 @@
       </div>
     </section>
 
-    <section id="section-content" style="
-      background-color: whitesmoke; 
-      width: 80%;
-      margin: 0 auto;
-    "></section>
+    <section class="section-content">
+
+      <div class="content" style="--color-var: var(--mobile-color)">
+        <div class="content-title">
+          <img src="./image/icon-mobile.svg">
+          <p>Formações em</p>
+          <h2>Mobile</h2>
+        </div>
+        <div class="content-grid" id="mobile"></div>
+      </div>
+
+      <div class="content" style="--color-var: var(--programming-color)">
+        <div class="content-title">
+          <img src="./image/icon-programming.svg">
+          <p>Formações em</p>
+          <h2>Programação</h2>
+        </div>
+        <div class="content-grid" id="programacao"></div>
+      </div>
+
+      <div class="content" style="--color-var: var(--front-end-color)">
+        <div class="content-title">
+          <img src="./image/icon-frontEnd.svg">
+          <p>Formações em</p>
+          <h2>Front-end</h2>
+        </div>
+        <div class="content-grid" id="front-end"></div>
+      </div>
+
+      <div class="content" style="--color-var: var(--devops-color)">
+        <div class="content-title">
+          <img src="./image/icon-devOps.svg">
+          <p>Formações em</p>
+          <h2>DevOps</h2>
+        </div>
+        <div class="content-grid" id="devops"></div>
+      </div>
+
+      <div class="content" style="--color-var: var(--design-ux-color)">
+        <div class="content-title">
+          <img src="./image/icon-designUx.svg">
+          <p>Formações em</p>
+          <h2>Design & Ux</h2>
+        </div>
+        <div class="content-grid" id="design-ux"></div> 
+      </div>
+
+      <div class="content" style="--color-var: var(--marketing-digital-color)">
+        <div class="content-title">
+          <img src="./image/icon-marketingDigital.svg">
+          <p>Formações em</p>
+          <h2>Marketing Digital</h2>
+        </div>
+        <div class="content-grid" id="marketing-digital"></div>
+      </div>
+
+      <div class="content" style="--color-var: var(--data-science-color)">
+        <div class="content-title">
+          <img src="image/icon-dataScience.svg">
+          <p>Formações em</p>
+          <h2>Data Science</h2>
+        </div>
+        <div class="content-grid" id="data-science"></div>
+      </div>
+
+      <div class="content" style="--color-var: var(--innovation-management-color)">
+        <div class="content-title">
+          <img src="./image/icon-innovationManagement.svg">
+          <p>Formações em</p>
+          <h2>Inovação & Gestão</h2>
+        </div>
+        <div class="content-grid" id="inovacao-gestao"></div>
+      </div>
+    
+    </section>
+
+    <footer style="margin-top: 200px; width: 100%; height: 30%; background-color: grey"></footer>
 
    </main>
   </body>
