Update page formation

--- a/formation.html
+++ b/formation.html
@@ -48,77 +48,148 @@
     <section class="section-content">
 
       <div class="content" style="--color-var: var(--mobile-color)">
-        <div class="content-title">
-          <img src="./image/icon-mobile.svg">
-          <p>Formações em</p>
-          <h2>Mobile</h2>
+        <div class="content-header">
+          <div class="header-title">
+            <img src="./image/icon-mobile.svg">
+            <div>
+              <p>Formações em</p>
+              <h3>Mobile</h3>
+            </div>
+          </div>
+          <div class="header-formation">
+            <img src="./image/arrow-board.svg">
+             <p id="mobile-number"></p>
+          </div>
         </div>
         <div class="content-grid" id="mobile"></div>
       </div>
 
       <div class="content" style="--color-var: var(--programming-color)">
-        <div class="content-title">
-          <img src="./image/icon-programming.svg">
-          <p>Formações em</p>
-          <h2>Programação</h2>
+        <div class="content-header">
+          <div class="header-title">
+            <img src="./image/icon-programming.svg">
+            <div>
+              <p>Formações em</p>
+              <h3>Programação</h3>
+            </div>
+          </div>
+          <div class="header-formation">
+            <img src="./image/arrow-board.svg">
+             <p id="programacao-number"></p>
+          </div>
         </div>
         <div class="content-grid" id="programacao"></div>
       </div>
 
       <div class="content" style="--color-var: var(--front-end-color)">
-        <div class="content-title">
-          <img src="./image/icon-frontEnd.svg">
-          <p>Formações em</p>
-          <h2>Front-end</h2>
+        <div class="content-header">
+          <div class="header-title">
+            <img src="./image/icon-frontEnd.svg">
+            <div>
+              <p>Formações em</p>
+              <h3>Front-end</h3>
+            </div>
+          </div>
+          <div class="header-formation">
+            <img src="./image/arrow-board.svg">
+             <p id="front-end-number"></p>
+          </div>
         </div>
         <div class="content-grid" id="front-end"></div>
       </div>
 
       <div class="content" style="--color-var: var(--devops-color)">
-        <div class="content-title">
-          <img src="./image/icon-devOps.svg">
-          <p>Formações em</p>
-          <h2>DevOps</h2>
+        <div class="content-header">
+          <div class="header-title">
+            <img src="./image/icon-devOps.svg">
+            <div>
+              <p>Formações em</p>
+              <h3>DevOps</h3>
+            </div>
+          </div>
+          <div class="header-formation">
+            <img src="./image/arrow-board.svg">
+             <p id="devops-number"></p>
+          </div>
         </div>
         <div class="content-grid" id="devops"></div>
       </div>
 
       <div class="content" style="--color-var: var(--design-ux-color)">
-        <div class="content-title">
-          <img src="./image/icon-designUx.svg">
-          <p>Formações em</p>
-          <h2>Design & Ux</h2>
+        <div class="content-header">
+          <div class="header-title">
+            <img src="./image/icon-designUx.svg">
+            <div>
+              <p>Formações em</p>
+              <h3>Design & Ux</h3>
+            </div>
+          </div>
+          <div class="header-formation">
+            <img src="./image/arrow-board.svg">
+             <p id="design-ux-number"></p>
+          </div>
         </div>
         <div class="content-grid" id="design-ux"></div> 
       </div>
 
       <div class="content" style="--color-var: var(--marketing-digital-color)">
-        <div class="content-title">
-          <img src="./image/icon-marketingDigital.svg">
-          <p>Formações em</p>
-          <h2>Marketing Digital</h2>
+        <div class="content-header">
+          <div class="header-title">
+            <img src="./image/icon-marketingDigital.svg">
+            <div>
+              <p>Formações em</p>
+              <h3>Marketing Digital</h3>
+            </div>
+          </div>
+          <div class="header-formation">
+            <img src="./image/arrow-board.svg">
+             <p id="marketing-digital-number"></p>
+          </div>
         </div>
         <div class="content-grid" id="marketing-digital"></div>
       </div>
 
       <div class="content" style="--color-var: var(--data-science-color)">
-        <div class="content-title">
-          <img src="image/icon-dataScience.svg">
-          <p>Formações em</p>
-          <h2>Data Science</h2>
+        <div class="content-header">
+          <div class="header-title">
+            <img src="image/icon-dataScience.svg">
+            <div>
+              <p>Formações em</p>
+              <h3>Data Science</h3>
+            </div>
+          </div>
+          <div class="header-formation">
+            <img src="./image/arrow-board.svg">
+             <p id="data-science-number"></p>
+          </div>
         </div>
         <div class="content-grid" id="data-science"></div>
       </div>
 
       <div class="content" style="--color-var: var(--innovation-management-color)">
-        <div class="content-title">
-          <img src="./image/icon-innovationManagement.svg">
-          <p>Formações em</p>
-          <h2>Inovação & Gestão</h2>
+        <div class="content-header">
+          <div class="header-title">
+            <img src="./image/icon-innovationManagement.svg">
+            <div>
+              <p>Formações em</p>
+              <h3>Inovação & Gestão</h3>
+            </div>
+          </div>
+          <div class="header-formation">
+            <img src="./image/arrow-board.svg">
+            <p id="inovacao-gestao-number"></p>
+          </div>
         </div>
         <div class="content-grid" id="inovacao-gestao"></div>
       </div>
     
+    </section>
+
+    <section >
+    <label>
+      <input>
+      <button>enviar</button>
+    </label>
     </section>
 
     <footer style="margin-top: 200px; width: 100%; height: 30%; background-color: grey"></footer>
