--- a/index.html
+++ b/index.html
@@ -219,4 +219,6 @@
     </body>
  
   <script src="./scripts/index_scripts.js"></script>
+  <script src="./scripts/input_search.js"></script>
+
 </html>
