--- a/formation.html
+++ b/formation.html
@@ -14,8 +14,6 @@
   </head>
 
   <body>
-   <script src="components/header.js"></script>
-
    <main class="main-formation">
 
     <section class="section-header">
@@ -43,6 +41,8 @@
         </div>
       </div>
     </section>
+
+    <span id="span"></span>
 
     <section class="section-content">
 
