--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <link rel="icon" type="image/jpg" href="./image/a.jpg" />
 
-    <title>Alura - JavaScript</title>
+    <title>AluraScript</title>
 
     <link rel="stylesheet" href="./styles/styles.css">
     <link rel="stylesheet" href="./styles/index_styles.css">
