--- a/formation.html
+++ b/formation.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./styles/styles.css">
     <link rel="stylesheet" href="./styles/header_styles.css">
     <link rel="stylesheet" href="./styles/formation_styles.css">
+    <link rel="stylesheet" href="./styles/footer_styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet">
   </head>
 
@@ -256,27 +257,31 @@
 
       </section>
 
-      <footer style="
-        margin-top: 100px; 
-        width: 100%; 
-        height: 150px; 
-        background-color: #167bf7;
-        display: flex;
-        justify-content: center;
-        align-items: center;    
-      ">
-        <a href="/#">
-          <h1 style="
-            color: white;
-            font-size: 3rem;
-            font-weight: 700;
-            ">
-            AluraScript
-          </h1>
-        </a>
-      </footer>
-
+      
     </main>
+
+    <footer class="footer">
+      <div class="container">
+        <h2><a href="/">AluraScript</a></h2>
+
+        <ul class="nav-list">
+          <h3>Navegação</h3>
+          <li>
+            <a href="/courses.html">Cursos</a>
+          </li>
+          <li>
+            <a href="#header">Formações</a>
+          </li>
+          <li>
+            <a href="#">Dev em &ltT&gt</a> 
+          </li>   
+          <li>
+            <a href="#header">Voltar para a topo</a>
+          </li>
+        </ul>
+      </div>
+    </footer>
+
   </body>
 
   <script src="scripts/input_search.js"></script>
