--- a/formation.html
+++ b/formation.html
@@ -16,7 +16,7 @@
   </head>
 
   <body>
-    <header class="header"  id="header">
+    <header class="header">
       <nav class="nav-bar">
         <ul>
           <li>
@@ -261,22 +261,22 @@
     </main>
 
     <footer class="footer">
-      <div class="container">
+      <div class="footer-container">
         <h2><a href="/">AluraScript</a></h2>
 
-        <ul class="nav-list">
+        <ul class="footer-list">
           <h3>Navegação</h3>
           <li>
             <a href="/courses.html">Cursos</a>
           </li>
           <li>
-            <a href="#header">Formações</a>
+            <a href="#">Formações</a>
           </li>
           <li>
             <a href="#">Dev em &ltT&gt</a> 
           </li>   
           <li>
-            <a href="#header">Voltar para a topo</a>
+            <a href="#">Voltar para a topo</a>
           </li>
         </ul>
       </div>
@@ -284,7 +284,7 @@
 
   </body>
 
-  <script src="scripts/input_search.js"></script>
+  <script src="./scripts/input_search.js"></script>
   <script type="module" src="./scripts/formation_scripts.js"></script>
   <script src="./scripts/input_search.js"></script>
 
