--- a/formation.html
+++ b/formation.html
@@ -24,7 +24,7 @@
           </li>
           <li>
             <form onsubmit="return handleSubmitSearch(event)">
-              <label for="search-course" >
+              <label for="input-search" >
                 <input class="input" id="input-search" placeholder="O que você quer aprender?">
                 <button class="input-button" type="submit"></button>
               </label>
@@ -100,7 +100,7 @@
         </div>
       </section>
 
-      <span id="span"></span>
+      <span id="span-error"></span>
 
       <section class="section-content">
 
