--- a/courses.html
+++ b/courses.html
@@ -86,7 +86,7 @@
 
       <h1 id="title"></h1>
 
-      <div class="letters"></div>
+      <div id="letters" class="letters"></div>
 
       <ul id="list"></ul> 
 
