Add page formation_mobile

--- a/formations.html
+++ b/formations.html
@@ -10,7 +10,7 @@
 
     <link rel="stylesheet" href="./styles/styles.css">
     <link rel="stylesheet" href="./styles/header_styles.css">
-    <link rel="stylesheet" href="./styles/formation_styles.css">
+    <link rel="stylesheet" href="./styles/formations_styles.css">
     <link rel="stylesheet" href="./styles/footer_styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet">
   </head>
@@ -45,7 +45,7 @@
       <div class="nav-formation">
         <ul>
           <li>
-            <a href="#" style="--color-var: var(--mobile-color)">Mobile</a>
+            <a href="/formation_mobile.html  " style="--color-var: var(--mobile-color)">Mobile</a>
           </li>          
           <li>
             <a href="#" style="--color-var: var(--programming-color)" >Programação</a>
@@ -285,7 +285,7 @@
   </body>
 
   <script src="./scripts/input_search.js"></script>
-  <script type="module" src="./scripts/formation_scripts.js"></script>
+  <script type="module" src="./scripts/formations_scripts.js"></script>
   <script src="./scripts/input_search.js"></script>
 
 </html>
