--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </label>
           </form>
           <a class="link" href="/courses.html">Cursos</a>
-          <a class="link" href="/formation.html">Formações</a>
+          <a class="link" href="/formations.html">Formações</a>
           <a class="link" href="#">Entrar</a>
           <button class="primary-button">Matricule-se</button>
         </nav>
@@ -50,7 +50,7 @@
           <div class="categories">
               
             <div class="category-wrapper" style="border-color: var(--mobile-color)">
-                <a href="#" class="category-link" style="color: var(--mobile-color)">
+                <a href="/formation_mobile.html" class="category-link" style="color: var(--mobile-color)">
                   <div class="category-icon" style="background-color: var(--mobile-color)">
                     <img src="image/icon-mobile.svg" alt="Ícone Mobile">
                 </div>
@@ -224,7 +224,7 @@
               <a href="/courses.html">Cursos</a>
             </li>
             <li>
-              <a href="/formation.html">Formações</a>
+              <a href="/formations.html">Formações</a>
             </li>
             <li>
               <a href="#">Dev em &ltT&gt</a> 
