--- a/search.html
+++ b/search.html
@@ -36,7 +36,7 @@
             <a href="/courses.html">Cursos</a>
           </li>
           <li>
-            <a href="/formation.html">Formações</a>
+            <a href="/formations.html">Formações</a>
           </li>
           <li>
             <a href="#">Dev em &ltT&gt</a> 
@@ -47,7 +47,7 @@
       <div class="nav-formation">
         <ul>
           <li>
-            <a href="#" style="--color-var: var(--mobile-color)">Mobile</a>
+            <a href="/formation_mobile.html  " style="--color-var: var(--mobile-color)">Mobile</a>
           </li>          
           <li>
             <a href="#" style="--color-var: var(--programming-color)" >Programação</a>
@@ -94,7 +94,7 @@
             <a href="/courses.html">Cursos</a>
           </li>
           <li>
-            <a href="/formation.html">Formações</a>
+            <a href="/formations.html">Formações</a>
           </li>
           <li>
             <a href="#">Dev em &ltT&gt</a> 
