--- a/formation_mobile.html
+++ b/formation_mobile.html
@@ -126,47 +126,47 @@
 
       </section>
 
-      <section>
+      <section class="section-about">
+      
+        <div class="about-header">
+          <h2>Por onde começar com <span>Mobile</span> ?</h2>
+          <p>O <strong>Desenvolvimento Mobile</strong> oferece diferentes opções para a criação de aplicativos para iOS e Android. Se você precisa criar uma <strong>aplicação para smartphones</strong> existem alguns caminhos principais:</p>
+        </div>
 
-        <h2>Por onde começar com <span>Mobile</span> ?</h2>
-
-        <p>O <strong>Desenvolvimento Mobile</strong> oferece diferentes opções para a criação de aplicativos para iOS e Android. Se você precisa criar uma <strong>aplicação para smartphones</strong> existem alguns caminhos principais:</p>
-
-        <ol style="padding: 30px;">
+        <ol class="about-list">
           <li>
             <p><strong>Desenvolvimento multiplataforma:</strong> frameworks como <strong>React Native, Flutter</strong> e <strong>Xamarin</strong> possuem ambientes e bibliotecas próprios que geram aplicativos finais com a mesma identidade que a um aplicativo nativo, mas ainda podem exigir customizações específicas. Aqui você pode começar a estudar pelo <a href="#">React Native</a> ou começar pela <a href="#">formação Flutter</a>.</p>
           </li>
           <li>
-            <p><strong>Desenvolvimento híbrido:</strong> ferramentas  como <a href="#"">Ionic</a> e <a href="#">Phonegap</a> tornam possível escrever grande parte de uma aplicação usando as ferramentas tradicionais da web(<strong>HTML</strong>, <strong>CSS</strong> e <strong>JavaScript</strong>), gerando aplicativos tanto para Android quanto para iPhone com uma única fonte de código. O visual desses aplicativos não será como o do nativo e pode causar estranheza, mas a velocidade de desenvolvimento é maior. Nesse ambiente de desenvolvimento pode ser mais defícil acessar recursos específicos de celulares ou tablets, como acelerômetros, câmeras e GPS, mas esses questões têm sido resilvidas nas novas versões. Alguns categorizam o desenvolvimento híbrido e multiplataforma de 'desenvolvimento não-nativo'.</p>
+            <p><strong>Desenvolvimento híbrido:</strong> ferramentas  como <a href="#"">Ionic</a> e <a href="#">Phonegap</a> tornam possível escrever grande parte de uma aplicação usando as ferramentas tradicionais da web (<strong>HTML</strong>, <strong>CSS</strong> e <strong>JavaScript</strong>), gerando aplicativos tanto para Android quanto para iPhone com uma única fonte de código. O visual desses aplicativos não será como o do nativo e pode causar estranheza, mas a velocidade de desenvolvimento é maior. Nesse ambiente de desenvolvimento pode ser mais defícil acessar recursos específicos de celulares ou tablets, como acelerômetros, câmeras e GPS, mas esses questões têm sido resilvidas nas novas versões. Alguns categorizam o desenvolvimento híbrido e multiplataforma de 'desenvolvimento não-nativo'.</p>
           </li>
           <li>
             <p><strong>Desenvolvimento nativo:</strong> criar um código para um aplicativo <strong>Android</strong> e outro para <strong>iOS</strong>, algo que traz um esforço dobrado de manutenção, mas traz ganhos em uma <i>User Experience</i> melhor, já que a interface se encaixa perfeitamente com o sistema. Também é possível acessar todos os recursos do celular. A <a href="#">formação Android</a> e a <a href="#">formação iOS com Swift</a> são excelentes pontos de partidas!</p>
           </li>
         </ol>
 
-        <p>Escolher a abordagem a ser usada pode ser tarefa difícil, e vai depender de fatores como o seu público-alvo e se você precisa ou não de recursos avançados e específicos do Android ou do iOS.</p>
-
-        <p>No ambiente de desenvolvimento vai ser comum encontrar as pessoas programando com <strong>Xcode</strong> para <strong>Swift no iOS</strong>, e <strong>Android Studio</strong> ou <strong>IntelliJ</strong> para <strong>Java e Kotlin no Android</strong>, mas não estamos restritos a esses editores e IDEs. Emuladores e sistemas que testam aplicativos em uma gama enorme de smartphones também farão parte da rotina de criação das apps.</p>
+        <div class="about-footer">
+          <p>Escolher a abordagem a ser usada pode ser tarefa difícil, e vai depender de fatores como o seu público-alvo e se você precisa ou não de recursos avançados e específicos do Android ou do iOS.</p>
+          <p>No ambiente de desenvolvimento vai ser comum encontrar as pessoas programando com <strong>Xcode</strong> para <strong>Swift no iOS</strong>, e <strong>Android Studio</strong> ou <strong>IntelliJ</strong> para <strong>Java e Kotlin no Android</strong>, mas não estamos restritos a esses editores e IDEs. Emuladores e sistemas que testam aplicativos em uma gama enorme de smartphones também farão parte da rotina de criação das apps.</p>
+        </div>
 
       </section>
 
       <section class="section-footer">
-        <div>
-          <img src="image/icon-mobile.svg" alt="Icone Mobile" style="width: 50px; height: 50px;">
+        <div class="footer-top"> 
+          <img src="image/icon-mobile.svg" alt="Icone Mobile">
           <p>Formações em</p>
           <h2>Mobile</h2>
         </div>
 
-        <div>
-          <ul>
-            <li><a href="#">Android</a></li>
-            <li><a href="#">Arquitetura Android</a></li>
-            <li><a href="#">Flutter</a></li>
-            <li><a href="#">iOS</a></li>
-            <li><a href="#">Multiplataforma mobile Xamarin</a></li>
-            <li><a href="#">Teste automatizados no Android</a></li>
-          </ul>
-        </div>        
+        <ul class="footer-bottom">
+          <li><a href="#">Android</a></li>
+          <li><a href="#">Flutter</a></li>
+          <li><a href="#">Multiplataforma mobile Xamarin</a></li>
+          <li><a href="#">Arquitetura Android</a></li>
+          <li><a href="#">iOS</a></li>
+          <li><a href="#">Teste automatizados no Android</a></li>
+        </ul>
 
       </section>
 
