Update page formtation_mobile

--- a/formation_mobile.html
+++ b/formation_mobile.html
@@ -101,7 +101,127 @@
 
         <div>
           <h3 id="multiplataform">Multiplataforma</h3>
-          <div></div>
+          <div>
+            <ul class="content-wrapper">
+
+              <li class="content-item">
+                <a href="#">
+                  <div class="item-top">
+                    <img src="https://www.alura.com.br/assets/api/cursos/react-native-function-components.svg">
+                    <span>Curso React Native: Trabalhando com Function components</span>
+                  </div>
+                  <div class="item-bottom">
+                    <img src="image/clock.svg">
+                    <span>10h</span>
+                  </div>
+                </a>
+              </li>
+
+              <li class="content-item">
+                <a href="#">
+                  <div class="item-top">
+                    <img src="https://www.alura.com.br/assets/api/cursos/react-native-rotas.svg">
+                    <span>Curso React Native: AsyncStorage e Navegação</span>
+                  </div>
+                  <div class="item-bottom">
+                    <img src="image/clock.svg">
+                    <span>12h</span>
+                  </div>
+                </a>
+              </li>
+
+              <li class="content-item">
+                <a href="#">
+                  <div class="item-top">
+                    <img src="https://www.alura.com.br/assets/api/cursos/react-native-design-system.svg">
+                  <span>Curso React Native: Design System no seu app</span>
+                </div>
+                <div class="item-bottom">
+                  <img src="image/clock.svg">
+                  <span>08h</span>
+                  </div>
+                </a>
+              </li>
+
+               <li class="content-item">
+                <a href="#">
+                  <div class="item-top">
+                    <img src="https://www.alura.com.br/assets/api/cursos/xamarin-aplicativos-mobile-com-visual-studio-parte-1.svg">
+                    <span>Curso React Xamarin parte 1: Crie aplicativos mobile com Visual Studio</span>
+                  </div>
+                  <div class="item-bottom">
+                    <img src="image/clock.svg">
+                    <span>07h</span>
+                  </div>
+                </a>
+              </li>
+
+               <li class="content-item">
+                <a href="#">
+                  <div class="item-top">
+                    <img src="https://www.alura.com.br/assets/api/cursos/xamarin-aplicativos-mobile-com-visual-studio-parte-2.svg">
+                    <span>Curso React Xamarin parte 2: Crie aplicativos mobile com Visual Studio</span>
+                  </div>
+                  <div class="item-bottom">
+                    <img src="image/clock.svg">
+                    <span>08h</span>
+                  </div>
+                </a>
+              </li>
+
+               <li class="content-item">
+                <a href="#">
+                  <div class="item-top">
+                    <img src="https://www.alura.com.br/assets/api/cursos/xamarin-aplicativos-mobile-com-visual-studio-parte-3.svg">
+                    <span>Curso React Xamarin parte 3: Crie aplicativos mobile com Visual Studio</span>
+                  </div>
+                  <div class="item-bottom">
+                    <img src="image/clock.svg">
+                    <span>08h</span>
+                  </div>
+                </a>
+              </li>
+
+               <li class="content-item">
+                <a href="#">
+                  <div class="item-top">
+                    <img src="https://www.alura.com.br/assets/api/cursos/xamarin-aplicativos-mobile-com-visual-studio-parte-4.svg">
+                    <span>Curso React Xamarin parte 4: Crie aplicativos mobile com Visual Studio</span>
+                  </div>
+                  <div class="item-bottom">
+                    <img src="image/clock.svg">
+                    <span>08h</span>
+                  </div>
+                </a>
+              </li>
+
+               <li class="content-item">
+                <a href="#">
+                  <div class="item-top">
+                    <img src="https://www.alura.com.br/assets/api/cursos/dart-primeiro-passos.svg">
+                    <span>Curso Dart: Primeiros passos com a linguagem</span>
+                  </div>
+                  <div class="item-bottom">
+                    <img src="image/clock.svg">
+                    <span>08h</span>
+                  </div>
+                </a>
+              </li>
+
+               <li class="content-item">
+                <a href="#">
+                  <div class="item-top">
+                    <img src="https://www.alura.com.br/assets/api/cursos/dart-orientacao-objetos.svg">
+                    <span>Curso Dart: Dominando a Orientação a Objetos</span>
+                  </div>
+                  <div class="item-bottom">
+                    <img src="image/clock.svg">
+                    <span>10h</span>
+                  </div>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
 
         <div>
