--- a/formation_mobile.html
+++ b/formation_mobile.html
@@ -99,7 +99,7 @@
 
       <section class="section-content">
 
-        <div>
+        <div class="div-content">
           <h3 id="multiplataform">Multiplataforma</h3>
             <ul class="content-wrapper">
 
@@ -223,7 +223,7 @@
             </ul>
         </div>
 
-        <div>
+        <div class="div-content">
           <h3 id="flutter">Flutter</h3>
             <ul class="content-wrapper">
 
@@ -361,7 +361,7 @@
           <ul>
         </div>
 
-        <div>
+        <div class="div-content">
           <h3 id="android">Android</h3>
           <ul class="content-wrapper">
 
@@ -784,7 +784,7 @@
           </ul>
         </div>
 
-        <div>
+        <div class="div-content">
           <h3 id="ios">iOS</h3>
           <ul class="content-wrapper">
           
@@ -1012,7 +1012,7 @@
           </ul>
         </div>
 
-        <div>
+        <div class="div-content">
           <h3 id="games">Jogos</h3>
             <ul class="content-wrapper">
 
@@ -1056,8 +1056,6 @@
               </li>
 
             </ul>
-          </div>
-
         </div>
 
       </section>
@@ -1091,8 +1089,7 @@
       <section class="section-footer">
         <div class="footer-top"> 
           <img src="image/icon-mobile.svg" alt="Icone Mobile">
-          <p>Formações em</p>
-          <h2>Mobile</h2>
+          <p>Formações em <span>Mobile</span></p>            
         </div>
 
         <ul class="footer-bottom">
