--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
                 <h4>mobile</h4>
               </a>
               <div class="category-linkTecnologies">
-                <a href="#" class="category-linkTecnology">Flutter, React Native,</a>
-                <a href="#" class="category-linkTecnology">iOS e Swift,</a>
-                <a href="#" class="category-linkTecnology">Android, Kotlin,</a>
-                <a href="#" class="category-linkTecnology">Jogos</a>
-                <a href="#" class="category-linkTecnology">e mais...</a>
+                <a href="/formation_mobile.html#multiplataform" class="category-linkTecnology">Flutter, React Native,</a>
+                <a href="/formation_mobile.html#android" class="category-linkTecnology">Android, Kotlin,</a>
+                <a href="/formation_mobile.html#ios" class="category-linkTecnology">iOS e Swift,</a>
+                <a href="/formation_mobile.html#games" class="category-linkTecnology">Jogos</a>
+                <a href="/formation_mobile.html" class="category-linkTecnology">e mais...</a>
               </div>
             </div>            
           
