--- a/formation_mobile.html
+++ b/formation_mobile.html
@@ -76,6 +76,10 @@
       
       <section class="section-header">
 
+        <div class="header-image">
+          <div></div>
+        </div>
+
         <div class="header-icon">
           <img src="image/icon-mobile.svg" alt="Icone Mobile">
           <p>Cursos de</p>
