--- a/formation_mobile.html
+++ b/formation_mobile.html
@@ -10,7 +10,7 @@
 
     <link rel="stylesheet" href="./styles/styles.css">
     <link rel="stylesheet" href="./styles/header_styles.css">
-    <link rel="stylesheet" href="./styles/formationMobile_styles.css">
+    <link rel="stylesheet" href="./styles/formationPage_styles.css">
     <link rel="stylesheet" href="./styles/footer_styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet">
   </head>
@@ -72,12 +72,11 @@
       </div>
     </header>
 
-    <main class="container"> 
+    <main class="container" style="--color-var: var(--mobile-color)""> 
       
       <section class="section-header">
 
         <div class="header-image">
-          <div></div>
         </div>
 
         <div class="header-icon">
